[gd_scene load_steps=23 format=3 uid="uid://r0f04oj5qd60"]

[ext_resource type="Texture2D" uid="uid://bmtrmrj7qudof" path="res://Sunny Land Collection Files/Packs/Packs/Sunnyland/spritesheets/frog-idle.png" id="1_uhj6x"]
[ext_resource type="Script" path="res://mobs/frog_mobs.gd" id="1_ui2ly"]
[ext_resource type="Texture2D" uid="uid://b85pdm3dw8748" path="res://Sunny Land Collection Files/Packs/Packs/Sunnyland/spritesheets/frog-jump.png" id="2_tnsrg"]
[ext_resource type="Texture2D" uid="uid://b7jq1034yipj8" path="res://Sunny Land Collection Files/Packs/Packs/Sunnyland/spritesheets/enemy-deadth.png" id="3_28mdn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xk8kc"]
size = Vector2(26, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_nknmm"]
atlas = ExtResource("3_28mdn")
region = Rect2(0, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qi3c"]
atlas = ExtResource("3_28mdn")
region = Rect2(40, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_nai3c"]
atlas = ExtResource("3_28mdn")
region = Rect2(80, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8nga"]
atlas = ExtResource("3_28mdn")
region = Rect2(120, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_suumi"]
atlas = ExtResource("3_28mdn")
region = Rect2(160, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_efdyj"]
atlas = ExtResource("3_28mdn")
region = Rect2(200, 0, 40, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_edovt"]
atlas = ExtResource("1_uhj6x")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7blx1"]
atlas = ExtResource("1_uhj6x")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iy7o"]
atlas = ExtResource("1_uhj6x")
region = Rect2(70, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6boi6"]
atlas = ExtResource("1_uhj6x")
region = Rect2(105, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ocg7t"]
atlas = ExtResource("2_tnsrg")
region = Rect2(0, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo18h"]
atlas = ExtResource("2_tnsrg")
region = Rect2(35, 0, 35, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5vqh"]
atlas = ExtResource("2_tnsrg")
region = Rect2(70, 0, 35, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w2q05"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nknmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qi3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nai3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8nga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suumi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efdyj")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_edovt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7blx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iy7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6boi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edovt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edovt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edovt")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ocg7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo18h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5vqh")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vwtvr"]
radius = 295.015

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucrdd"]
size = Vector2(19, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g7ytr"]
size = Vector2(32, 16)

[node name="frog_mobs" type="CharacterBody2D"]
script = ExtResource("1_ui2ly")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9.5)
shape = SubResource("RectangleShape2D_xk8kc")
metadata/_edit_lock_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -11)
sprite_frames = SubResource("SpriteFrames_w2q05")
animation = &"Idle"

[node name="PlayerDetection" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_vwtvr")
metadata/_edit_lock_ = true

[node name="DeatchDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeatchDetection"]
position = Vector2(-0.5, -16)
shape = SubResource("RectangleShape2D_ucrdd")

[node name="HurtDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtDetection"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_g7ytr")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_entered" from="DeatchDetection" to="." method="_on_deatch_detection_body_entered"]
[connection signal="body_entered" from="HurtDetection" to="." method="_on_hurt_detection_body_entered"]
